--- a/food_redistribution/requirements.txt
+++ b/food_redistribution/requirements.txt
@@ -4,6 +4,7 @@ distlib==0.3.1
 dj-database-url==0.5.0
 Django==3.2.7
 django-heroku==0.3.1
+dotenv==0.19.1
 filelock==3.0.12
 gunicorn==20.1.0
 numpy==1.20.2
@@ -13,3 +14,4 @@ six==1.15.0
 sqlparse==0.4.2
 virtualenv==20.4.3
 whitenoise==5.3.0
+
