--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 script: python manage.py migrate
 before-install:
-  - pip install -r food_redistribution/requirements.txt
+  - pip install -r ./food_redistribution/requirements.txt
   - pip install flake8
   - pip install black
 script:
