--- a/food_redistribution/requirements.txt
+++ b/food_redistribution/requirements.txt
@@ -4,7 +4,7 @@ distlib==0.3.1
 dj-database-url==0.5.0
 Django==3.2.7
 django-heroku==0.3.1
-dotenv==0.19.1
+python-dotenv==0.19.1
 filelock==3.0.12
 gunicorn==20.1.0
 numpy==1.20.2
