--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before-install:
   - pip install flake8
   - pip install black
 script:
-  - flake8 --max-line-length=100
+  - flake8 --max-line-length=100 --ignore=F405,F403
   - black --check .
   - coverage run --source=accounts,cal ./food_redistribution/manage.py test
 
