--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before-install:
   - pip install black
 script:
   - flake8 --max-line-length=130 --ignore=F405,F403,F541,W503,E231
+  - black .
   - black --check .
   - coverage run --source=accounts,cal ./food_redistribution/manage.py test
 
