--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
 language: python
-script: python manage.py migrate
 before-install:
   - pip install -r requirements.txt
   - pip install flake8
   - pip install black
+before_script:
+  - python manage.py makemigrations
+  - python manage.py migrate
 script:
   - flake8 --max-line-length=130 --ignore=F405,F403,F541,W503,E231
   - black .
   - black --check .
   - cd food_redistribution
   - coverage run --source="." manage.py test accounts
-
 after_success:
   - coveralls
