updated travis file to include append flag

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ script:
   - black .
   - black --check .
   - cd food_redistribution
-  - coverage run --source="." manage.py test accounts
-  - coverage run --source="." manage.py test cal
-  - coverage run --source="." manage.py test yelp_search.tests.test_views
+  - coverage run -a --source="." manage.py test accounts
+  - coverage run -a --source="." manage.py test cal
+  - coverage run -a --source="." manage.py test yelp_search.tests.test_views
 
-after_success:
+after_success:  
   - coveralls
