--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: python
+script: python manage.py migrate
 before-install:
   - pip install -r requirements.txt
   - pip install flake8
-  - pip install black  
+  - pip install black
 script:
-  - python manage.py migrate
   - flake8 --max-line-length=130 --ignore=F405,F403,F541,W503,E231
   - black .
   - black --check .
@@ -13,5 +13,5 @@ script:
   - coverage run -a --source="." manage.py test cal
   - coverage run -a --source="." manage.py test yelp_search.tests.test_views
 
-after_success:  
+after_success:
   - coveralls
