--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before-install:
   - pip install flake8
   - pip install black
 script:
-  - flake8 --max-line-length=130 --ignore=F405,F403,F541,W503,E231
+  - flake8 --max-line-length=130 --ignore=F405,F403,F541,W503,E231, E722
   - black .
   - black --check .
   - cd food_redistribution
